# CLI-Anything-WEB-ItamarZand88

./: .coverage  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  pyproject.toml  registry.json  release-please-config.json
.claude/skills/airbnb-cli/: SKILL.md
.claude/skills/amazon-cli/: SKILL.md
.claude/skills/booking-cli/: SKILL.md
.claude/skills/capitoltrades-cli/: SKILL.md
.claude/skills/chatgpt-cli/: SKILL.md
.claude/skills/codewiki-cli/: SKILL.md
.claude/skills/futbin-cli/: SKILL.md  market-playbook.md
.claude/skills/gai-cli/: SKILL.md
.claude/skills/gh-trending-cli/: SKILL.md
.claude/skills/hackernews-cli/: SKILL.md
.claude/skills/linkedin-cli/: SKILL.md
.claude/skills/notebooklm-cli/: SKILL.md
.claude/skills/pexels-cli/: SKILL.md
.claude/skills/producthunt-cli/: SKILL.md
.claude/skills/reddit-cli/: SKILL.md
.claude/skills/stitch-cli/: SKILL.md
.claude/skills/sync-check/: SKILL.md
.claude/skills/tripadvisor-cli/: SKILL.md
.claude/skills/unsplash-cli/: SKILL.md
.claude/skills/worldcup-cli/: SKILL.md
.claude/skills/youtube-cli/: SKILL.md
.github/workflows/: about-sync.yml  canary.yml  publish-backfill.yml  publish.yml  tests.yml
airbnb/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
airbnb/agent-harness/cli_web/airbnb/: __main__.py  airbnb_cli.py
amazon/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
amazon/agent-harness/cli_web/amazon/: __init__.py  __main__.py  amazon_cli.py
booking/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
booking/agent-harness/cli_web/booking/: booking_cli.py
capitoltrades/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
capitoltrades/agent-harness/cli_web/capitoltrades/: __main__.py  capitoltrades_cli.py
chatgpt/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
chatgpt/agent-harness/cli_web/chatgpt/: chatgpt_cli.py
cli-anything-web-plugin/.claude-plugin/: plugin.json
cli-anything-web-plugin/agents/: traffic-fidelity-reviewer.md
cli-anything-web-plugin/scripts/: analyze-traffic.py  capture-checkpoint.py  extract-browser-cookies.py  generate-test-docs.py  mcp_server.py  mitmproxy-capture.py  parse-trace.py  phase-state.py  plugin_paths.py  run-pipeline.py  scaffold-cli.py  smoke-test.py  state_utils.py  traffic_utils.py  validate-capture.py  validate-checklist.py
cli-anything-web-plugin/scripts/tests/: conftest.py  test_analyze_traffic.py  test_capture_checkpoint.py  test_generate_test_docs.py  test_mitmproxy_capture.py  test_parse_trace.py  test_phase_state.py  test_plugin_paths.py  test_rpc_templates.py  test_run_pipeline.py  test_scaffold_cli.py  test_skill_quality.py  test_smoke_test.py  test_state_utils.py  test_traffic_utils.py  test_validate_capture.py  test_validate_checklist.py
cli-anything-web-plugin/skills/boilerplate/: SKILL.md
cli-anything-web-plugin/skills/capture/: SKILL.md
cli-anything-web-plugin/skills/capture/references/: exploration-checklists.md  framework-detection.md  mitmproxy-mode.md  playwright-cli-advanced.md  playwright-cli-commands.md  playwright-cli-sessions.md  playwright-cli-tracing.md  protection-detection.md
cli-anything-web-plugin/skills/gap-analyzer/: SKILL.md
cli-anything-web-plugin/skills/methodology/: SKILL.md
cli-anything-web-plugin/skills/methodology/references/: client-architecture-example.py  exception-hierarchy-example.py  helpers-module-example.py  persistent-context-example.py  polling-backoff-example.py  (+3 more)
cli-anything-web-plugin/skills/shared/: CONVENTIONS.md  RECOVERY.md
cli-anything-web-plugin/skills/standards/: SKILL.md
cli-anything-web-plugin/skills/testing/: SKILL.md
cli-anything-web-plugin/templates/: SKILL.md.tpl  cli_entry.py.tpl  client_batchexecute.py.tpl  client_rest_curl.py.tpl  client_rest_httpx.py.tpl  exceptions.py.tpl  helpers.py.tpl  helpers_partial_ids.py.tpl  helpers_polling.py.tpl
cli-web-core/: CHANGELOG.md  pyproject.toml
cli-web-core/cli_web_core/: __init__.py  exceptions.py  output.py  polling.py  repl_skin.py
cli-web-core/cli_web_core/testing/: __init__.py  contract.py  fixtures.py
cli-web-core/tests/: conftest.py  test_core_runtime.py  test_doctor.py  test_mcp_server.py  test_repl_skin.py  test_testing_helpers.py
codewiki/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
devkit/: CHANGELOG.md  pyproject.toml
devkit/cli_web_devkit/: __init__.py  about.py  canary.py  cli.py  matrix.py  paths.py  registry.py  registry_check.py  sync.py
devkit/cli_web_devkit/models/: __init__.py  state.py  traffic.py
devkit/tests/: conftest.py  test_about.py  test_canary.py  test_models.py  test_registry.py  test_sync.py
docs/: PUBLISHING.md  REFACTORING-PLAN.md
docs/registry/: index.html
futbin/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
gai/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
gh-trending/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
hackernews/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
linkedin/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
meta/: CHANGELOG.md  pyproject.toml
notebooklm/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
pexels/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
producthunt/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
reddit/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
scripts/: check-registry-sync.py  sync-shared.py
stitch/agent-harness/: .manifest.json  CHANGELOG.md  conftest.py  setup.py
tests/contract/: conftest.py  test_doctor_contract.py  test_fleet.py  test_mcp.py
tripadvisor/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
unsplash/agent-harness/: .manifest.json  CHANGELOG.md  UNSPLASH.md  setup.py
worldcup/agent-harness/: .manifest.json  CHANGELOG.md  README.md  WORLDCUP.md  setup.py
youtube/agent-harness/: .manifest.json  CHANGELOG.md  setup.py
(+259 files in other folders)
