[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-web-core"
version = "1.0.0"
description = "Shared runtime for cli-web-* CLIs: exceptions, JSON output envelope, REPL skin, polling, test fixtures"
requires-python = ">=3.10"
license = { text = "MIT" }
# Zero hard dependencies by design — generated CLIs must stay lightweight.
# prompt_toolkit is optional (REPL autocomplete degrades gracefully).
dependencies = []

[project.optional-dependencies]
repl = ["prompt_toolkit>=3.0"]

[tool.setuptools.packages.find]
include = ["cli_web_core*"]

[tool.setuptools.package-data]
cli_web_core = ["py.typed"]
